[gd_scene load_steps=3 format=3 uid="uid://dqca6gy0b43h6"]

[ext_resource type="Theme" uid="uid://b1u6ta00sppfr" path="res://resources/scale_x_control.tres" id="1_864pt"]
[ext_resource type="Script" path="res://scripts/scale_control.gd" id="2_03yqt"]

[node name="ScaleControl" type="Control"]
layout_mode = 3
anchor_top = 0.077
anchor_bottom = 0.077
offset_top = -49.896
offset_right = 1000.0
offset_bottom = 50.104
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_864pt")
script = ExtResource("2_03yqt")

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 2

[node name="ProgressBar" type="ProgressBar" parent="HSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 45.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 2.0
value = 1.0
show_percentage = false

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="HSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="HSlider/ProgressBar" to="." method="_on_progress_bar_value_changed"]
